<resources>
    <string name="app_name">MelekSonmez</string>
    <string name="welcome">  Welcome to the Application !</string>
    <string name="menu_mail_button">Mail</string>
    <string name="menu_sensor_button">Sensors</string>
    <string name="menu_user_button">Users</string>
    <string name="username_string">UserName</string>
    <string name="password_string">Password</string>
    <string name="enter_username_hint">Enter UserName</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="login_string">LOGIN</string>
    <string name="to_string">Send to</string>
    <string name="subject_string">Subject</string>
    <string name="send_string">SEND</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="appMode">Application Screen Mode</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="age">Age</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="personal_header">Personal Info</string>
    <string name="app_settings_header">App Settings</string>
    <string name="signature_title">Your signature</string>
    <string name="attachment">Attachment</string>

</resources>
