<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="638dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        android:textAlignment="center"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/personalInfo_textView"
            android:layout_width="216dp"
            android:layout_height="43dp"
            android:text="@string/personal_header"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signature_textView"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:text="@string/signature_title"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signature_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/age_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/age_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/gender_textView"
            android:layout_width="197dp"
            android:layout_height="35dp"
            android:text="@string/gender"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/gender_radioGroup"
            android:layout_width="122dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/male_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:id="@+id/weight_textView"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/weight_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/height_textView"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/height_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/appSettings_textView"
            android:layout_width="235dp"
            android:layout_height="42dp"
            android:text="@string/app_settings_header"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/appMode_switch"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/appMode" />

        <Button
            android:id="@+id/settingsSave_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="save" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>