<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".SendEmail">

    <EditText
        android:id="@+id/toEditText"
        android:layout_width="414dp"
        android:layout_height="54dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_blue_light"
        android:ems="10"
        android:hint="@string/to_string"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subjectEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_green_light"
        android:ems="10"
        android:hint="@string/subject_string"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/attachment_button"
        app:layout_constraintEnd_toEndOf="@id/toEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/toEditText"
        app:layout_constraintTop_toBottomOf="@+id/toEditText" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="412dp"
        android:layout_height="180dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:drawableBottom="@android:color/background_dark"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/sendButton"
        app:layout_constraintEnd_toEndOf="@id/subjectEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/subjectEditText"
        app:layout_constraintTop_toBottomOf="@+id/attachment_button" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="190dp"
        android:background="@android:color/holo_purple"
        android:text="@string/send_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/messageEditText"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageEditText" />

    <Button
        android:id="@+id/attachment_button"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginStart="307dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/attachment"
        app:layout_constraintBottom_toTopOf="@+id/messageEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>