<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="154dp"
        android:layout_height="98dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="54dp"
        android:background="@android:color/background_light"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/menu_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_textView"
        android:layout_width="105dp"
        android:layout_height="34dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_light_background"
        android:text="Menu"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="104dp"
        android:layout_height="215dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:divider="@color/colorAccent"
        android:dividerPadding="@dimen/fab_margin"
        android:forceDarkAllowed="true"
        android:layerType="software"
        android:layoutMode="clipBounds"
        android:orientation="horizontal"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle|beginning|end">

            <Button
                android:id="@+id/mail_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/holo_blue_light"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_mail_button"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle|beginning|end">

            <Button
                android:id="@+id/sensor_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/menu_sensor_button"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle|beginning|end">

            <Button
                android:id="@+id/users_button"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/menu_user_button"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showDividers="middle|beginning|end|none">

            <Button
                android:id="@+id/settings_button"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorAccent"
                android:text="@string/title_activity_settings"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>