<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
!-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_dark">

            <TextView
                android:id="@+id/username_textView"
                android:layout_width="414dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:background="?attr/colorBackgroundFloating"
                android:text="@string/username_string"
                android:textColor="?attr/colorControlActivated"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/username_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username_editText"
                android:layout_width="412dp"
                android:layout_height="43dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:autofillHints="@string/enter_username_hint"
                android:background="@android:color/background_light"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_username_hint"
                android:inputType="text"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/password_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_textView" />

            <TextView
                android:id="@+id/password_textView"
                android:layout_width="412dp"
                android:layout_height="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="?attr/colorBackgroundFloating"
                android:text="@string/password_string"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/password_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_editText" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/enter_password_hint"
                android:background="@android:color/background_light"
                android:hint="@string/enter_password_hint"
                android:inputType="textPassword"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_textView" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="108dp"
                android:layout_height="53dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="390dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/login_string"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_editText" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="412dp"
                android:layout_height="407dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <!--
    </androidx.constraintlayout.widget.ConstraintLayout>
    !-->